kubernetes/global.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: standard
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastpai-deployment
  namespace: standard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: fastapi:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: db-data
          mountPath: /app/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: standard
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: fastapi
